# backlogburner

./: .env  .env.development  .env.production  .gitignore  README.md  Readme.docx  package-lock.json  package.json
.github/workflows/: update-frontend.yml  update-website.yml  update-workflow.yml  update_backend.yml
api-backend/: api.py  index.js  package-lock.json  package.json  requirements.txt
api_backend/: Cargo.toml
api_backend/src/: TestSample.json  aco.rs  endpoints.rs  events.rs  ga.rs  main.rs  model.rs
public/: index.html
src/: App.vue  api-common.js  main.js
src/assets/css/: main.css
src/components/: AddCalendarEvent.vue  AddMediaTask.vue  CalendarEventForm.vue  Header.vue  Hobby.vue  HobbyCrud.vue  HobbyList.vue  Media.vue  MediaList.vue
src/router/: index.js
src/views/: LoginView.vue  LogoutView.vue  PrivacyPolicy.vue  ScheduleView.vue
