[package]
name = "api_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-cors = "0.5"
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8.4"
itertools = "0.10.3"
rsgenetic = "^1.8.0"
rand_chacha= "0.3.1"
rand_core="0.6.3"